force-app/main/default/objects/leaseworks__Incoming_Data_Processing_Log__c/leaseworks__Incoming_Data_Processing_Log__c.object-meta.xml
<CustomObject>
    <label>Incoming Data Processing Log</label>
    <nameField>
        <label>Incoming Data Processing Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incoming Data Processing Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>