force-app/main/default/objects/leaseworks__Incoming_Data_Processing_Log__c/fields/leaseworks__CurrentRentFinal__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__CurrentRentFinal__c</fullName>
    <label>CurrentRentFinal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>