force-app/main/default/objects/leaseworks__Incoming_Data_Processing_Log__c/fields/leaseworks__LeaseMaturity__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LeaseMaturity__c</fullName>
    <label>LeaseMaturity</label>
    <type>Date</type>
</CustomField>