force-app/main/default/objects/leaseworks__Incoming_Data_Processing_Log__c/fields/leaseworks__LeaseStart__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LeaseStart__c</fullName>
    <label>LeaseStart</label>
    <type>Date</type>
</CustomField>