force-app/main/default/objects/leaseworks__Incoming_Data_Processing_Log__c/fields/leaseworks__Registration__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Registration__c</fullName>
    <label>Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>